--- a/packs/spring-gradle/charts/templates/deployment.yaml
+++ b/packs/spring-gradle/charts/templates/deployment.yaml
@@ -20,59 +20,61 @@ spec:
       labels:
         draft: {{ default "draft-app" .Values.draft }}
         app: {{ template "fullname" . }}
+        appName: {{ template "name" . }}
+        spring-actuator: "true"
 {{- if .Values.podAnnotations }}
       annotations:
 {{ toYaml .Values.podAnnotations | indent 8 }}
 {{- end }}
     spec:
-{{- if .Values.serviceAccount.enabled }}
-{{- if .Values.serviceAccount.name }}
+      {{- if .Values.serviceAccount.enabled }}
+      {{- if .Values.serviceAccount.name }}
       serviceAccountName: {{ .Values.serviceAccount.name }}
-{{- else }}
+      {{- else }}
       serviceAccountName: {{ template "fullname" . }}
-{{- end }}
-{{- end }}
+      {{- end }}
+      {{- end }}
       containers:
-      - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        env:
-{{ toYaml .Values.envValueFrom | indent 8 }}
-        - name: VERSION
-          value: {{ .Chart.Version }}
-{{- range $pkey, $pval := .Values.env }}
-        - name: {{ $pkey }}
-          value: {{ quote $pval }}
-{{- end }}
-        envFrom:
-{{ toYaml .Values.envFrom | indent 10 }}
-        ports:
-        - name: http
-          containerPort: {{ .Values.service.internalPort }}
-        {{ if .Values.actuator.enabled }}
-        - name: {{ .Values.actuator.name | quote}}
-          containerPort: {{ .Values.actuator.port }}
-        {{ end }}
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.livenessProbe.probePath | default .Values.probePath }}
-            port: {{ .Values.service.internalPort }}
-          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
-          successThreshold: {{ .Values.livenessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.readinessProbe.probePath | default .Values.probePath }}
-            port: {{ .Values.service.internalPort }}
-          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
-          successThreshold: {{ .Values.readinessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
-        resources:
-{{ toYaml .Values.resources | indent 12 }}
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            {{ toYaml .Values.envValueFrom | indent 8 }}
+            - name: VERSION
+              value: {{ .Chart.Version }}
+            {{- range $pkey, $pval := .Values.env }}
+            - name: {{ $pkey }}
+              value: {{ quote $pval }}
+          {{- end }}
+          envFrom:
+          {{ toYaml .Values.envFrom | indent 10 }}
+          ports:
+            - name: http
+              containerPort: {{ int .Values.service.internalPort }}
+            {{ if .Values.actuator.enabled }}
+            - name: {{ .Values.actuator.name | quote}}
+              containerPort: {{ .Values.actuator.port }}
+          {{ end }}
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.actuator.probePathLiveness }}
+              port: {{ .Values.actuator.port }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+            successThreshold: {{ .Values.livenessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.actuator.probePathReadiness }}
+              port: {{ .Values.actuator.port }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+            successThreshold: {{ .Values.readinessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+          resources:
+      {{ toYaml .Values.resources | indent 12 }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       imagePullSecrets:
 {{- range $pval := .Values.jx.imagePullSecrets }}
-      - name: {{ quote $pval }}
+        - name: {{ quote $pval }}
 {{- end }}
 {{- end }}
