--- a/packs/environment/.lighthouse/jenkins-x/release.yaml
+++ b/packs/environment/.lighthouse/jenkins-x/release.yaml
@@ -72,6 +72,14 @@ spec:
                 memory: 512Mi
             workingDir: /workspace/source
           steps:
+            - name: git-prepare
+              image: gcr.io/jenkinsxio/jx-cli:latest
+              script: |
+                #!/usr/bin/env bash
+                git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
+                git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
+                git config --global credential.helper store
+
             - args:
                 - pr
               command:
