--- a/tasks/jx-finish-release.yaml
+++ b/tasks/jx-finish-release.yaml
@@ -91,26 +91,22 @@ spec:
     - name: promote-changelog
       image: gcr.io/jenkinsxio/builder-go:2.1.142-761
       workingDir: $(workspaces.source.path)
-      command:
-        - /bin/bash
-        - -c
-      args:
-        - source /workspace/source/.jx/variables.sh && jx step changelog --version v${VERSION}
+      script: |
+        #!/bin/bash
+        source /workspace/source/.jx/variables.sh
+        jx step changelog --version v${VERSION}
 
     - name: promote-helm-release
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
-      args:
-        - jx gitops helm release
-      command:
-        - /bin/sh
-        - -c
+      script: |
+        #!/usr/bin/env sh
+        jx gitops helm release
 
     - name: promote-jx-promote
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
-      command:
-        - /bin/bash
-        - -c
-      args:
-        - source /workspace/source/.jx/variables.sh && jx promote -b --all-auto --timeout 1h --no-poll
+      script: |
+        #!/usr/bin/env sh
+        source /workspace/source/.jx/variables.sh
+        jx promote -b --all-auto --timeout 1h --no-poll
