--- a/tasks/jx-finish.yaml
+++ b/tasks/jx-finish.yaml
@@ -95,9 +95,8 @@ spec:
     - name: promote-jx-preview
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
-      command:
-        - /bin/bash
-        - -c
-      args:
-        - source /workspace/source/.jx/variables.sh && jx preview create
+      script: |
+        #!/bin/bash
+        source /workspace/source/.jx/variables.sh
+        jx preview create
 
