--- a/tasks/jx-setup-task.yaml
+++ b/tasks/jx-setup-task.yaml
@@ -166,6 +166,7 @@ spec:
       image: gcr.io/jenkinsxio/builder-go
       workingDir: $(workspaces.source.path)
       script: |
+        #!/usr/bin/env bash
         if $(params.IS_RELEASE); then
             jx step next-version $(params.NEXT_VERSION_ARGS)
           else
@@ -176,6 +177,7 @@ spec:
       image: gcr.io/jenkinsxio/builder-go
       workingDir: $(workspaces.source.path)
       script: |
+        #!/usr/bin/env bash
         if $(params.IS_RELEASE); then
             jx step tag --version $(cat VERSION)
           else
@@ -186,12 +188,8 @@ spec:
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
+        #!/usr/bin/env sh
         jx gitops variables
-        git commit --amend -m "chore(ci): added variables"
-      volumeMounts:
-        - mountPath: /etc/podinfo
-          name: podinfo
-          readOnly: true
 
     - name: jx-variables-results
       image: gcr.io/jenkinsxio/jx-cli:latest
