--- a/tasks/sonar-task.yaml
+++ b/tasks/sonar-task.yaml
@@ -57,6 +57,9 @@ spec:
     - name: REPO_NAME
       description: repository name
       default: ""
+    - name: WAIT_COMPLETION
+      description: wait for sonar job completion
+      default: "false"
   results:
     - name: url
       description: Sonar analys URL
@@ -153,22 +156,26 @@ spec:
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env bash
-        while !(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep '"status":"SUCCESS"' > /dev/null;)
-        do
-          sleep 1;
-        done
-        export ANALYSIS_ID=$(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep -Po '(?<="analysisId":")[^"\\]*(?:\\.[^"\\]*)*')
-        curl -u $SONAR_TOKEN: -v --silent "https://sonarcloud.io/api/qualitygates/project_status?analysisId=$ANALYSIS_ID&pullRequest=$SONAR_PR_KEY" > .quality_gate
-        cat .quality_gate
-        cat .quality_gate | grep -Po '(?<="projectStatus":{"status":")[^"\\]*(?:\\.[^"\\]*)*' > .status
-        printf "\nStatus:"
-        cat .status
-        if [[ $(< .status) != "OK" ]]; then
-          echo "Sonar status failed!"
-          exit 1;
+        if [[ -n "$(params.WAIT_COMPLETION)" ]]; then
+          #!/usr/bin/env bash
+          while !(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep '"status":"SUCCESS"' > /dev/null;)
+          do
+            sleep 1;
+          done
+          export ANALYSIS_ID=$(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep -Po '(?<="analysisId":")[^"\\]*(?:\\.[^"\\]*)*')
+          curl -u $SONAR_TOKEN: -v --silent "https://sonarcloud.io/api/qualitygates/project_status?analysisId=$ANALYSIS_ID&pullRequest=$SONAR_PR_KEY" > .quality_gate
+          cat .quality_gate
+          cat .quality_gate | grep -Po '(?<="projectStatus":{"status":")[^"\\]*(?:\\.[^"\\]*)*' > .status
+          printf "\nStatus:"
+          cat .status
+          if [[ $(< .status) != "OK" ]]; then
+            echo "Sonar status failed!"
+            exit 1;
+          fi
+          echo "Sonar status successful!"
+        else
+          echo "Skip wait for completion..."
         fi
-        echo "Sonar status successful!"
       env:
         - name: SONAR_TOKEN
           valueFrom:
