--- a/pipelines/spring-gradle-sonar-pipeline.yaml
+++ b/pipelines/spring-gradle-sonar-pipeline.yaml
@@ -137,6 +137,8 @@ spec:
           value: "$(params.REPO_OWNER)"
         - name: REPO_NAME
           value: "$(params.REPO_NAME)"
+        - name: WAIT_COMPLETION
+          value: "true"
       workspaces:
         - name: source
           workspace: shared-data
