--- a/tasks/sonar-task.yaml
+++ b/tasks/sonar-task.yaml
@@ -156,8 +156,8 @@ spec:
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
-        if [[ -n "$(params.WAIT_COMPLETION)" ]]; then
-          #!/usr/bin/env bash
+        #!/usr/bin/env bash
+        if $(params.WAIT_COMPLETION); then
           while !(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep '"status":"SUCCESS"' > /dev/null;)
           do
             sleep 1;
