--- a/tasks/jx-finish.yaml
+++ b/tasks/jx-finish.yaml
@@ -96,7 +96,7 @@ spec:
       image: gcr.io/jenkinsxio/jx-cli:latest
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env sh
+        #!/bin/bash
         source /workspace/source/.jx/variables.sh
         jx preview create
 
