--- a/pipelines/python-pullrequest-pipeline.yaml
+++ b/pipelines/python-pullrequest-pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: jx-sonar-python-pullrequest
+  name: jx-python-pullrequest
 spec:
   description: |
     description
@@ -50,6 +50,10 @@ spec:
     - description: git url to clone
       name: REPO_URL
       type: string
+    - name: DOCKLE_EXIT_LEVEL
+      default: "fatal"
+    - name: TRIVY_SEVERITY
+      default: "HIGH"
   workspaces:
     - name: shared-data
       description: |
@@ -74,8 +78,6 @@ spec:
         - name: source
           workspace: shared-data
       params:
-        - name: GIT_CHECKOUT_STRATEGY
-          value: "branch"
         - name: BUILD_ID
           value: $(params.BUILD_ID)
         - name: JOB_NAME
@@ -104,36 +106,68 @@ spec:
           value: $(params.REPO_URL)
     - name: build
       taskRef:
-        name: python-build-with-coverage
+        name: python-build
       runAfter:
         - "jx-setup"
       workspaces:
         - name: source
           workspace: shared-data
-    - name: sonar-check
+    - name: conventionalcommits
       taskRef:
-        name: sonarqube-scanner
+        name: conventional-commits
+      runAfter:
+        - "jx-setup"
+      workspaces:
+        - name: source
+          workspace: shared-data
+      params:
+        - name: PR_NUMBER
+          value: $(params.PULL_NUMBER)
+        - name: FAIL
+          value: "true"
+    - name: container-build
+      taskRef:
+        name: kaniko
       runAfter:
         - "build"
       params:
-        - name: SONAR_PROJECT_KEY
-          value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
-        - name: SONAR_PROJECT_NAME
-          value: "$(params.REPO_NAME)"
-        - name: SONAR_PR_BRANCH
-          value: "$(tasks.jx-setup.results.source_branch)"
-        - name: SONAR_PR_BASE
-          value: "$(params.PULL_BASE_REF)"
-        - name: SONAR_PR_KEY
-          value: "$(params.PULL_NUMBER)"
-        - name: SONAR_SECRET
-          value: "sonar"
-        - name: REPO_OWNER
-          value: "$(params.REPO_OWNER)"
+        - name: IMAGE
+          value: $(tasks.jx-setup.results.image)
+      workspaces:
+        - name: source
+          workspace: shared-data
+    - name: jx-finish
+      taskRef:
+        name: jx-finish-pr
+      runAfter:
+        - "container-build"
+      params:
+        - name: BUILD_ID
+          value: $(params.BUILD_ID)
+        - name: JOB_NAME
+          value: $(params.JOB_NAME)
+        - name: JOB_SPEC
+          value: $(params.JOB_SPEC)
+        - name: JOB_TYPE
+          value: $(params.JOB_TYPE)
+        - name: PULL_BASE_REF
+          value: $(params.PULL_BASE_REF)
+        - name: PULL_BASE_SHA
+          value: $(params.PULL_BASE_SHA)
+        - name: PULL_NUMBER
+          value: $(params.PULL_NUMBER)
+        - name: PULL_PULL_REF
+          value: $(params.PULL_PULL_REF)
+        - name: PULL_PULL_SHA
+          value: $(params.PULL_PULL_SHA)
+        - name: PULL_REFS
+          value: $(params.PULL_REFS)
         - name: REPO_NAME
-          value: "$(params.REPO_NAME)"
-        - name: WAIT_COMPLETION
-          value: "true"
+          value: $(params.REPO_NAME)
+        - name: REPO_OWNER
+          value: $(params.REPO_OWNER)
+        - name: REPO_URL
+          value: $(params.REPO_URL)
       workspaces:
         - name: source
           workspace: shared-data
