--- a/pipelines/python-release-pipeline.yaml
+++ b/pipelines/python-release-pipeline.yaml
@@ -1,10 +1,10 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: jx-sonar-python-pullrequest
+  name: jx-python-release
 spec:
   description: |
-    description
+    Release
   params:
     - description: the unique build number
       name: BUILD_ID
@@ -50,6 +50,10 @@ spec:
     - description: git url to clone
       name: REPO_URL
       type: string
+    - name: NEXT_VERSION_ARGS
+      type: string
+      description: release args
+      default: "--semantic-release --filename package.json"
   workspaces:
     - name: shared-data
       description: |
@@ -74,8 +78,6 @@ spec:
         - name: source
           workspace: shared-data
       params:
-        - name: GIT_CHECKOUT_STRATEGY
-          value: "branch"
         - name: BUILD_ID
           value: $(params.BUILD_ID)
         - name: JOB_NAME
@@ -88,8 +90,6 @@ spec:
           value: $(params.PULL_BASE_REF)
         - name: PULL_BASE_SHA
           value: $(params.PULL_BASE_SHA)
-        - name: PULL_NUMBER
-          value: $(params.PULL_NUMBER)
         - name: PULL_PULL_REF
           value: $(params.PULL_PULL_REF)
         - name: PULL_PULL_SHA
@@ -102,6 +102,10 @@ spec:
           value: $(params.REPO_OWNER)
         - name: REPO_URL
           value: $(params.REPO_URL)
+        - name: IS_RELEASE
+          value: "true"
+        - name: NEXT_VERSION_ARGS
+          value: $(params.NEXT_VERSION_ARGS)
     - name: build
       taskRef:
         name: python-build-with-coverage
@@ -110,30 +114,66 @@ spec:
       workspaces:
         - name: source
           workspace: shared-data
+    - name: container-build
+      taskRef:
+        name: kaniko
+      runAfter:
+        - "build"
+      params:
+        - name: IMAGE
+          value: $(tasks.jx-setup.results.image)
+      workspaces:
+        - name: source
+          workspace: shared-data
     - name: sonar-check
       taskRef:
         name: sonarqube-scanner
       runAfter:
-        - "build"
+        - "container-build"
       params:
-        - name: SONAR_PROJECT_KEY
-          value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
-        - name: SONAR_PROJECT_NAME
-          value: "$(params.REPO_NAME)"
-        - name: SONAR_PR_BRANCH
-          value: "$(tasks.jx-setup.results.source_branch)"
-        - name: SONAR_PR_BASE
-          value: "$(params.PULL_BASE_REF)"
-        - name: SONAR_PR_KEY
-          value: "$(params.PULL_NUMBER)"
-        - name: SONAR_SECRET
-          value: "sonar"
         - name: REPO_OWNER
           value: "$(params.REPO_OWNER)"
         - name: REPO_NAME
           value: "$(params.REPO_NAME)"
-        - name: WAIT_COMPLETION
-          value: "true"
+        - name: SONAR_PROJECT_KEY
+          value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
+        - name: SONAR_PROJECT_NAME
+          value: "$(params.REPO_NAME)"
+        - name: SONAR_SECRET
+          value: "sonar"
+      workspaces:
+        - name: source
+          workspace: shared-data
+    - name: jx-finish-release
+      taskRef:
+        name: jx-finish-release
+      runAfter:
+        - "container-build"
+      params:
+        - name: BUILD_ID
+          value: $(params.BUILD_ID)
+        - name: JOB_NAME
+          value: $(params.JOB_NAME)
+        - name: JOB_SPEC
+          value: $(params.JOB_SPEC)
+        - name: JOB_TYPE
+          value: $(params.JOB_TYPE)
+        - name: PULL_BASE_REF
+          value: $(params.PULL_BASE_REF)
+        - name: PULL_BASE_SHA
+          value: $(params.PULL_BASE_SHA)
+        - name: PULL_PULL_REF
+          value: $(params.PULL_PULL_REF)
+        - name: PULL_PULL_SHA
+          value: $(params.PULL_PULL_SHA)
+        - name: PULL_REFS
+          value: $(params.PULL_REFS)
+        - name: REPO_NAME
+          value: $(params.REPO_NAME)
+        - name: REPO_OWNER
+          value: $(params.REPO_OWNER)
+        - name: REPO_URL
+          value: $(params.REPO_URL)
       workspaces:
         - name: source
           workspace: shared-data
